RESOLVED FIXED83931
Full Screen mode does not preserve CALayer ordering after exiting.
https://bugs.webkit.org/show_bug.cgi?id=83931
Summary Full Screen mode does not preserve CALayer ordering after exiting.
Jer Noble
Reported 2012-04-13 12:28:57 PDT
Full Screen mode does not preserve CALayer ordering after exiting.
Attachments
Patch (1.74 KB, patch)
2012-04-13 12:33 PDT, Jer Noble
no flags
Patch (3.48 KB, patch)
2012-04-13 12:49 PDT, Jer Noble
no flags
Patch (3.36 KB, patch)
2012-04-26 14:25 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2012-04-13 12:30:01 PDT
Jer Noble
Comment 2 2012-04-13 12:33:27 PDT
Jer Noble
Comment 3 2012-04-13 12:49:17 PDT
Created attachment 137129 [details] Patch Made the same change to the WebKit full-screen code.
WebKit Review Bot
Comment 4 2012-04-18 14:54:09 PDT
Comment on attachment 137129 [details] Patch Clearing flags on attachment: 137129 Committed r114567: <http://trac.webkit.org/changeset/114567>
WebKit Review Bot
Comment 5 2012-04-18 14:54:16 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 6 2012-04-26 14:21:33 PDT
Do to a mistake on my part, this patch does not fix the original problem.
Jer Noble
Comment 7 2012-04-26 14:25:43 PDT
Jer Noble
Comment 8 2012-04-26 14:29:04 PDT
Note You need to log in before you can comment on or make changes to this bug.