Full Screen mode does not preserve CALayer ordering after exiting. https://bugs.webkit.org/show_bug.cgi?id=83931

Reviewed by Eric Carlson.

When swapping the placeholder and web views, use -[NSView addSubview:positioned:relativeTo:]
instead of -[NSView replaceSubview:with:], as the latter does not preserve the relative order
of the view's backing CALayers.

Source/WebKit/mac:

* WebView/WebFullScreenController.mm:
(-[WebFullScreenController _swapView:with:]):

Source/WebKit2:

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController _swapView:with:]):


Canonical link: https://commits.webkit.org/101792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114567 268f45cc-cd09-0410-ab3c-d52691b4dbfc