Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm
@@ -451,7 +451,8 @@ static const NSTimeInterval DefaultWatchdogTimerInterval = 1;
     [otherView setFrame:[view frame]];        
     [otherView setAutoresizingMask:[view autoresizingMask]];
     [otherView removeFromSuperview];
-    [[view superview] replaceSubview:view with:otherView];
+    [[view superview] addSubview:otherView positioned:NSWindowAbove relativeTo:otherView];
+    [otherView removeFromSuperview];
     [CATransaction commit];
 }
 
